<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistertoApp">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="223dp"
        android:layout_height="97dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="95dp">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log in as user" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log in as organizer" />
    </RadioGroup>


    <EditText
        android:id="@+id/fullName"
        android:layout_width="337dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:hint="@string/action_fullName"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="340dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:hint="@string/action_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <EditText
        android:id="@+id/enterpassword"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:hint="@string/action_ePassword"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/action_cPassword"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterpassword" />

    <Button
        android:id="@+id/RegisterBTN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4D9EC3"
        android:text="REGISTER"
        android:onClick="onClickRegisterR"
        app:layout_constraintBottom_toTopOf="@+id/signinNavigateBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

    <TextView
        android:id="@+id/helpTextRtT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Have An Account?"
        android:textColor="#AE3939"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signinNavigateBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBTN2" />

    <Button
        android:id="@+id/signinNavigateBTN"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="#FFFFFF"
        android:text="Sign in"
        android:onClick="onClickSigninR"
        android:textColor="#25C3D3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/helpTextRtT"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBTN2" />


</androidx.constraintlayout.widget.ConstraintLayout>